--- a/style.css
+++ b/style.css
@@ -2,3 +2,23 @@ body {
     font-family: Roboto, sans-serif;
 }
 
+header {
+    background-color: #1f2937;
+    color: white;
+}
+
+.title {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+header .text {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
