--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 body {
     font-family: Roboto, sans-serif;
+    margin: 0;
+}
+
+header, .content, .quote, .sign-up, footer {
+    padding: 15px 120px 90px;
 }
 
 header {
     background-color: #1f2937;
     color: white;
+    box-sizing: border-box;
 }
 
 .title {
@@ -21,4 +27,64 @@ header .text {
 .logo {
     font-size: 24px;
     color: #F9FAF8;
+    font-weight: bold;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    gap: 18px;
+}
+
+a {
+    color: #F9FAF8;
+    text-decoration: none;
+  }
+
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 90px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    height: 215px;
+}
+
+.header-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: baseline;
+    gap: 3px;
+}
+
+.header div {
+    flex: 1;
+}
+
+button {
+    color: white;
+    background-color: #3882F6;
+    font-weight: bold;
+    padding: 5px 25px;
+    border-radius: 8px;
+}
+
+.placeholder {
+    background-color: rgb(193, 193, 193);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img {
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
 }
